--- a/node-app/package.json
+++ b/node-app/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@grpc/proto-loader": "^0.5.3",
     "express": "^4.17.1",
+    "google-proto-files": "^1.1.2",
     "grpc": "^1.24.2"
   },
   "devDependencies": {},
